5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1758_1580.log
== TEST (2019-05-24 20:07:55) 
-- CODE:
from numpy import*
v1= array(eval(input("quais as notas dos alunos? ")))
v2= input("quais os nomes dos alunos? ")
i=0
t=0
j=0
k=0
n=size(v1)
while(i<size(v1)):
	if(v1[i]==-1):
		i=i+1
	elif(v1[i]>=6):
		t=t+1
	elif(v1[i]<6):
		j=j+1
v1=zeros(n-i,dtype=float)
x=sum(v1)/size(v1)
print(i, t, j, x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:08:46) 
-- CODE:
from numpy import*
v1= array(eval(input("quais as notas dos alunos? ")))
v2= input("quais os nomes dos alunos? ")
i=0
t=0
j=0
k=0
n=size(v1)
while(i<size(v1)):
	if(v1[i]==-1):
		i=i+1
	elif(v1[i]>=6):
		t=t+1
	elif(v1[i]<6):
		j=j+1
print(i,t,j)
		v1=zeros(n-i,dtype=float)
x=sum(v1)/size(v1)
print(i, t, j, x)
-- ERROR:
File "XXXX", line 17
    v1=zeros(n-i,dtype=float)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:09:01) 
-- CODE:
from numpy import*
v1= array(eval(input("quais as notas dos alunos? ")))
v2= input("quais os nomes dos alunos? ")
i=0
t=0
j=0
k=0
n=size(v1)
while(i<size(v1)):
	if(v1[i]==-1):
		i=i+1
	elif(v1[i]>=6):
		t=t+1
	elif(v1[i]<6):
		j=j+1
print(i,t,j)
v1=zeros(n-i,dtype=float)
x=sum(v1)/size(v1)
print(i, t, j, x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:10:20) 
-- CODE:
from numpy import*
v1= array(eval(input("quais as notas dos alunos? ")))
v2= input("quais os nomes dos alunos? ")
i=0
t=0
j=0
k=0
n=size(v1)
while(i<size(v1)):
	if(v1[i]==-1):
		k=k+1
	elif(v1[i]>=6):
		t=t+1
	elif(v1[i]<6):
		j=j+1
print(k,t,j)
v1=zeros(n-i,dtype=float)
x=sum(v1)/size(v1)
print(i, t, j, x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:21:16) 
-- CODE:
from numpy import*
a= array(eval(input("quais as notas dos alunos? ")))
b= input("quais os nomes dos alunos? ")
t=0
f=0
n=size(v1)
while(t<size(v1)):
	if(a[t]==-1):
		f=f+1
	t=t+1
print(f)
t=0
ap=0
while (t<n):
	if(a[t]>=6):
		ap=ap+1
	t=t+1
print(ap)
t-0
rp=0
while(t<n):
	if(a[t]<6) and (a[t]!=-1):
		rp=rp+1
	t=t+1
print(rp)
t=0
num=0
den=0
while(t<n):
	if a[t]!=-1:
		num=num+a[t]
	t=t+1
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:22:15) 
-- CODE:
from numpy import*
a= array(eval(input("quais as notas dos alunos? ")))
b= input("quais os nomes dos alunos? ")
t=0
f=0
n=size(a)
while(t<n):
	if(a[t]==-1):
		f=f+1
	t=t+1
print(f)
t=0
ap=0
while (t<n):
	if(a[t]>=6):
		ap=ap+1
	t=t+1
print(ap)
t-0
rp=0
while(t<n):
	if(a[t]<6) and (a[t]!=-1):
		rp=rp+1
	t=t+1
print(rp)
t=0
num=0
den=0
while(t<n):
	if a[t]!=-1:
		num=num+a[t]
	t=t+1
print(num)
-- EXECUTION TIME:
0.526252
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
0
45
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
0
17.0
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
0
70.32
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:22:16) 
-- CODE:
from numpy import*
a= array(eval(input("quais as notas dos alunos? ")))
b= input("quais os nomes dos alunos? ")
t=0
f=0
n=size(a)
while(t<n):
	if(a[t]==-1):
		f=f+1
	t=t+1
print(f)
t=0
ap=0
while (t<n):
	if(a[t]>=6):
		ap=ap+1
	t=t+1
print(ap)
t-0
rp=0
while(t<n):
	if(a[t]<6) and (a[t]!=-1):
		rp=rp+1
	t=t+1
print(rp)
t=0
num=0
den=0
while(t<n):
	if a[t]!=-1:
		num=num+a[t]
	t=t+1
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:23:19) 
-- CODE:
from numpy import*
a= array(eval(input("quais as notas dos alunos? ")))
b= array(eval(input("quais os nomes dos alunos? ")))
t=0
f=0
n=size(a)
while(t<n):
	if(a[t]==-1):
		f=f+1
	t=t+1
print(f)
t=0
ap=0
while (t<n):
	if(a[t]>=6):
		ap=ap+1
	t=t+1
print(ap)
t-0
rp=0
while(t<n):
	if(a[t]<6) and (a[t]!=-1):
		rp=rp+1
	t=t+1
print(rp)
t=0
num=0
den=0
while(t<n):
	if a[t]!=-1:
		num=num+a[t]
	t=t+1
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:23:42) 
-- CODE:
from numpy import*
a= array(eval(input("quais as notas dos alunos? ")))
b= array(eval(input("quais os nomes dos alunos? ")))
t=0
f=0
n=size(a)
while(t<n):
	if(a[t]==-1):
		f=f+1
	t=t+1
print(f)
t=0
ap=0
while (t<n):
	if(a[t]>=6):
		ap=ap+1
	t=t+1
print(ap)
t-0
rp=0
while(t<n):
	if(a[t]<6) and (a[t]!=-1):
		rp=rp+1
	t=t+1
print(rp)
t=0
num=0
den=0
while(t<n):
	if a[t]!=-1:
		num=num+a[t]
	t=t+1
print(num)
-- EXECUTION TIME:
0.329235
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
0
45
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
0
17.0
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
0
70.32
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:24:44) 
-- CODE:
from numpy import*
a= array(eval(input("quais as notas dos alunos? ")))
b= array(eval(input("quais os nomes dos alunos? ")))
t=0
f=0
n=size(a)
while(t<n):
	if(a[t]==-1):
		f=f+1
	t=t+1
print(f)
t=0
ap=0
while (t<n):
	if(a[t]>-6):
		ap=ap+1
	t=t+1
print(ap)
t-0
rp=0
while(t<n):
	if(a[t]<6) and (a[t]!=-1):
		rp=rp+1
	t=t+1
print(rp)
t=0
num=0
den=0
while(t<n):
	if a[t]!=-1:
		num=num+a[t]
	t=t+1
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:27:10) 
-- CODE:
from numpy import*
a= array(eval(input("quais as notas dos alunos? ")))
b= array(eval(input("quais os nomes dos alunos? ")))
t=0
f=0
n=size(a)
while(t<n):
	if(a[t]==-1):
		f=f+1
	t=t+1
print(f)
t=0
ap=0
while (t<n):
	if(a[t]>-6):
		ap=ap+1
	t=t+1
print(ap)
t=0
rp=0
while(t<n):
	if(a[t]<6) and (a[t]!=-1):
		rp=rp+1
	t=t+1
print(rp)
t=0
num=0
den=0
while(t<n):
	if a[t]!=-1:
		num=num+a[t]
	t=t+1
print(num)
-- EXECUTION TIME:
0.520729
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
12
5
45
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
11
5
17.0
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
11
4
70.32
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:27:11) 
-- CODE:
from numpy import*
a= array(eval(input("quais as notas dos alunos? ")))
b= array(eval(input("quais os nomes dos alunos? ")))
t=0
f=0
n=size(a)
while(t<n):
	if(a[t]==-1):
		f=f+1
	t=t+1
print(f)
t=0
ap=0
while (t<n):
	if(a[t]>-6):
		ap=ap+1
	t=t+1
print(ap)
t=0
rp=0
while(t<n):
	if(a[t]<6) and (a[t]!=-1):
		rp=rp+1
	t=t+1
print(rp)
t=0
num=0
den=0
while(t<n):
	if a[t]!=-1:
		num=num+a[t]
	t=t+1
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:30:40) 
-- CODE:
from numpy import*
a= array(eval(input("quais as notas dos alunos? ")))
b= array(eval(input("quais os nomes dos alunos? ")))
t=0
f=0
n=size(a)
while(t<n):
	if(a[t]==-1):
		f=f+1
	t=t+1
print(f)
t=0
ap=0
while (t<n):
	if(a[t]>=6):
		ap=ap+1
	t=t+1
print(ap)
t=0
rp=0
while(t<n):
	if(a[t]<6) and (a[t]!=-1):
		rp=rp+1
	t=t+1
print(rp)
t=0
num=0
den=0
while(t<n):
	if a[t]!=-1:
		num=num+a[t]
	t=t+1
print(b)
-- EXECUTION TIME:
0.491913
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
['A' 'B' 'C' 'D' 'E' 'F' 'G' 'H' 'I' 'J' 'K' 'L']
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
['ALICE' 'BENTO' 'CLARA' 'DAVI' 'ELSON' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
['CLARA' 'DAVI' 'ELSON' 'ALICE' 'BENTO' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:30:41) 
-- CODE:
from numpy import*
a= array(eval(input("quais as notas dos alunos? ")))
b= array(eval(input("quais os nomes dos alunos? ")))
t=0
f=0
n=size(a)
while(t<n):
	if(a[t]==-1):
		f=f+1
	t=t+1
print(f)
t=0
ap=0
while (t<n):
	if(a[t]>=6):
		ap=ap+1
	t=t+1
print(ap)
t=0
rp=0
while(t<n):
	if(a[t]<6) and (a[t]!=-1):
		rp=rp+1
	t=t+1
print(rp)
t=0
num=0
den=0
while(t<n):
	if a[t]!=-1:
		num=num+a[t]
	t=t+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:47:03) 
-- CODE:
from numpy import*
a= array(eval(input("quais as notas dos alunos? ")))
b= array(eval(input("quais os nomes dos alunos? ")))
t=0
f=0
n=size(a)
while(t<n):
	if(a[t]==-1):
		f=f+1
	t=t+1
print(f)
t=0
ap=0
while (t<n):
	if(a[t]>=6):
		ap=ap+1
	t=t+1
print(ap)
t=0
rp=0
while(t<n):
	if(a[t]<6) and (a[t]!=-1):
		rp=rp+1
	t=t+1
print(rp)
t=0
num=0
den=0
while(t<n):
	if a[t]!=-1:
		num=num+a[t]
		den= den+1
	t=t+1
print(round(num/den, 2))
m=max(a)
t=0
while t<n:
	if m==a[t]:
		m=b[t]
		t=t=1
	else:
		t=t+1
print(m)
-- EXECUTION TIME:
0.431374
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
quais as notas dos alunos? quais os nomes dos alunos? 6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
quais as notas dos alunos? quais os nomes dos alunos? 0
7
4
6.39
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:47:45) 
-- CODE:
from numpy import*
a= array(eval(input("quais as notas dos alunos? ")))
b= array(eval(input("quais os nomes dos alunos? ")))
t=0
f=0
n=size(a)
while(t<n):
	if(a[t]==-1):
		f=f+1
	t=t+1
print(f)
t=0
ap=0
while (t<n):
	if(a[t]>=6):
		ap=ap+1
	t=t+1
print(ap)
t=0
rp=0
while(t<n):
	if(a[t]<6) and (a[t]!=-1):
		rp=rp+1
	t=t+1
print(rp)
t=0
num=0
den=0
while(t<n):
	if a[t]!=-1:
		num=num+a[t]
		den= den+1
	t=t+1
print(round(num/den, 2))
m=max(a)
t=0
while t<n:
	if m==a[t]:
		m=b[t]
		t=t=1
	else:
		t=t+1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:48:11) 
-- CODE:
from numpy import*
a= array(eval(input("quais as notas dos alunos? ")))
b= array(eval(input("quais os nomes dos alunos? ")))
t=0
f=0
n=size(a)
while(t<n):
	if(a[t]==-1):
		f=f+1
	t=t+1
print(f)
t=0
ap=0
while (t<n):
	if(a[t]>=6):
		ap=ap+1
	t=t+1
print(ap)
t=0
rp=0
while(t<n):
	if(a[t]<6) and (a[t]!=-1):
		rp=rp+1
	t=t+1
print(rp)
t=0
num=0
den=0
while(t<n):
	if a[t]!=-1:
		num=num+a[t]
		den= den+1
	t=t+1
print(round(num/den, 2))
m=max(a)
t=0
while t<n:
	if m==a[t]:
		m=b[t]
		t=t=1
	else:
		t=t+1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:48:46) 
-- CODE:
from numpy import*
a= array(eval(input("quais as notas dos alunos? ")))
b= array(eval(input("quais os nomes dos alunos? ")))
t=0
f=0
n=size(a)
while(t<n):
	if(a[t]==-1):
		f=f+1
	t=t+1
print(f)
t=0
ap=0
while (t<n):
	if(a[t]>=6):
		ap=ap+1
	t=t+1
print(ap)
t=0
rp=0
while(t<n):
	if(a[t]<6) and (a[t]!=-1):
		rp=rp+1
	t=t+1
print(rp)
t=0
num=0
den=0
while(t<n):
	if a[t]!=-1:
		num=num+a[t]
		den= den+1
	t=t+1
print(round(num/den, 2))
m=max(a)
t=0
while t<n:
	if m==a[t]:
		m=b[t]
		t=t=1
	else:
		t=t+1
print(m)
-- EXECUTION TIME:
0.538218
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
